syntax = "proto3";
package perfume.v1;
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "perfumepb";

message Entry {
  string id = 1 [(gogoproto.moretags) = "bson:\"_id,omitempty\""];
  int64 created_at = 2 [(gogoproto.moretags) = "bson:\"created_at,omitempty\""];
  string link = 3;
  string title = 4;
  repeated string labels = 5;
}

message GetEntryListReq {
}

message GetEntryReq {
  string id = 1;
}

message EntryListResponse {
  repeated Entry entries = 1;
}

service PerfumeService{
  rpc CreateEntry(Entry) returns (Entry) {
    option (google.api.http) = {
      post: "/api/v1/entry/create"
    };
  }
  rpc DeleteEntry(Entry) returns (Entry) {
    option (google.api.http) = {
      delete: "/api/v1/entry/delete"
    };
  }
  rpc UpdateEntry(Entry) returns (Entry) {
    option (google.api.http) = {
      put: "/api/v1/entry/update"
    };
  }
  rpc GetEntryList(GetEntryListReq) returns (EntryListResponse) {
    option (google.api.http) = {
      get: "/api/v1/entry/list"
    };
  }
  rpc GetEntry(GetEntryReq) returns (Entry) {
    option (google.api.http) = {
      get: "/api/v1/entry/get/{id}"
    };
  }
}